# hschain-utxo

./: .buildinfo  .drone.yml  .gitignore  README.md  cabal.project  genindex.html  index.html  objects.inv  run.sh  search.html  searchindex.js  test.hs  todo
_sources/doc/: intro.rst.txt  lang.rst.txt  repl.rst.txt  service.rst.txt
config/: config.yaml  genesis.json  tx-example.json
doc/: api.html  core.html  includeme.html  intro.html  lang-quick-start.html  lang.html  repl.html  service.html  test.html
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/doc/: api.rst  core.rst  intro.rst  lang-quick-start.rst  lang.rst  service.rst  test.rst
docs/images/: intro-example-1.odt
hex-common/: .gitignore  hex-common.cabal
hex-common/src/Hex/Common/: Aeson.hs  CircularBuffer.hs  ClockBuffer.hs  Control.hs  Delay.hs  Generics.hs  IO.hs  Immortal.hs  Lens.hs  Lock.hs  Serialise.hs  Text.hs  Time.hs  TimeStampMap.hs  TvMap.hs  Url.hs  Yaml.hs
hex-common/src/Hex/Common/Server/: Sigterm.hs
hex-common/src/Hex/Common/Time/: Const.hs
hindley-milner-tags/: hindley-milner-tags.cabal
hindley-milner-tags/src/Language/: HM.hs
hindley-milner-tags/src/Language/HM/: AlgorithmW.hs  Alpha.hs  CoreAlgorithmW.hs  Infer.hs  Lang.hs  Pretty.hs  Subst.hs  Term.hs  Theta.hs  TyTerm.hs  Type.hs  TypeError.hs
hindley-milner-tags/test/: Main.hs
hindley-milner-tags/test/TM/: Infer.hs
hindley-milner-type-check/: README.md  hindley-milner-type-check.cabal
hindley-milner-type-check/examples/: Example.hs
hindley-milner-type-check/test/TM/: Infer.hs
hs-check/: CHANGELOG.md  hs-check.cabal
hs-check/src/Type/: Binding.hs  ClassEnv.hs  Expr.hs  Infer.hs  Loc.hs  Pretty.hs  Subst.hs  Type.hs
hschain-pow-check/: hschain-pow-check.cabal
hschain-pow-func/: hschain-pow-func.cabal
hschain-pow-func/src/HSChain/: POW.hs
hschain-utxo/: hschain-utxo.cabal
hschain-utxo-api/hschain-utxo-api-client/: ChangeLog.md  hschain-utxo-api-client.cabal
hschain-utxo-api/hschain-utxo-api-client/src/Hschain/Utxo/API/: Client.hs
hschain-utxo-api/hschain-utxo-api-rest/: ChangeLog.md  hschain-utxo-api-rest.cabal
hschain-utxo-blockchain/: CHANGELOG.md  hschain-utxo-blockchain.cabal
hschain-utxo-blockchain/src/Hschain/Utxo/: Blockchain.hs
hschain-utxo-blockchain/src/Hschain/Utxo/Blockchain/: Bchain.hs  Hschain.hs  Interpret.hs  Logic.hs  Net.hs
hschain-utxo-compiler/: CHANGELOG.md  hschain-utxo-compiler.cabal
hschain-utxo-compiler/app/: Main.hs
hschain-utxo-compiler/src/Hschain/Utxo/Compiler/: App.hs  Commands.hs  Options.hs
hschain-utxo-lang/: CHANGELOG.md  hschain-utxo-lang.cabal
hschain-utxo-lang/app/: Compiler.hs
hschain-utxo-lang/bench/: Main.hs
hschain-utxo-lang/examples/Examples/: SKI.hs  Simple.hs
hschain-utxo-lang/script/: CompileLC.hs  Expr.hs  Gmachine.hs  Infer.hs  LamLift.hs  Sigma.hs  TypeCheckLC.hs
hschain-utxo-lang/test/: Main.hs
hschain-utxo-lang/test/TM/: Core.hs
hschain-utxo-pow-node/: CHANGELOG.md  hschain-utxo-pow-node.cabal  run-pow.sh
hschain-utxo-pow-node/app/: CLI.hs  Genesis.hs  Light.hs  Main.hs  Mock.hs
hschain-utxo-pow-node/config/main/: node-val2.yaml
hschain-utxo-pow-node/config/pool/: genesis.json
hschain-utxo-pow-node/pow/: node1-1.yaml  utxo-genesis
hschain-utxo-pow-node/src/Hschain/Utxo/: App.hs
hschain-utxo-pow-node/src/Hschain/Utxo/Pow/: App.hs
hschain-utxo-pow-node/src/Hschain/Utxo/Pow/App/: Options.hs  Types.hs
hschain-utxo-pow-node/test/: Main.hs
hschain-utxo-pow-node/test/TM/: Blocks.hs  Store.hs
hschain-utxo-pow-node/test/TM/BCH/: Util.hs
hschain-utxo-pow-node/test/TM/SmartCon/: Basic.hs  ErgoMix.hs  PayForCoffee.hs  XorGame.hs
hschain-utxo-pow-node/tests/consensus/config/main/: node-val1.yaml  node-val3.yaml  node-val4.yaml  node-web.yaml
hschain-utxo-pow-node/tests/mining-consensus/: run-pow-2-node.sh  run-pow.sh
hschain-utxo-pow-node/tests/mining-consensus/pow/: node1-1.yaml  utxo-genesis
hschain-utxo-pow-node/tests/ytxo-tests/main/: node-web.yaml
hschain-utxo-pow-test/: CHANGELOG.md  hschain-utxo-pow-test.cabal
hschain-utxo-pow-test/app/: Main.hs
hschain-utxo-pow-test/config/main/: node-web.yaml
hschain-utxo-pow-test/scripts/: PayForCofee.hs
hschain-utxo-repl/: CHANGELOG.md  hschain-utxo-repl.cabal
hschain-utxo-repl/app/: Main.hs
hschain-utxo-repl/test/: Main.hs
hschain-utxo-service/: ChangeLog.md  hschain-utxo-service.cabal
hschain-utxo-service/app/: Main.hs
hschain-utxo-state/: ChangeLog.md  hschain-utxo-state.cabal
hschain-utxo-state/src/Hschain/Utxo/: State.hs
hschain-utxo-state/src/Hschain/Utxo/State/: Blockchain.hs  Pretty.hs  Query.hs  React.hs  Types.hs
hschain-utxo-state/src/Hschain/Utxo/State/Blockchain/: Config.hs
hschain-utxo-test/: hschain-utxo-test.cabal
hschain-utxo-test/app/: Main.hs
hschain-utxo-test/config/: genesis.json
hschain-utxo-test/config/main/: node-val1.yaml  node-val2.yaml  node-val3.yaml  node-val4.yaml  node-web.yaml
hschain-utxo-test/scripts/: PayForCofee.hs  SimpleExchange.hs  XorGame.hs
hschain-utxo-test/src/Hschain/Utxo/Test/Client/: Chan.hs  Monad.hs  Proc.hs  Wallet.hs
hschain-utxo-test/src/Hschain/Utxo/Test/Client/Scripts/: AtomicSwap.hs  Channel.hs  Lightning.hs  MultiSig.hs  PayForCofee.hs  ReversibleAddress.hs  SimpleExchange.hs  Utils.hs  XorGame.hs
hschain-utxo-test/src/Hschain/Utxo/Test/Client/Scripts/Lightning/: Example.hs  Network.hs  Protocol.hs  Tx.hs  User.hs
hschain-utxo-web-service/: hschain-utxo-web-service.cabal
hschain-utxo/app/: Genesis.hs
nix/: README.md  build-ci.sh  build.sh  cabal.project.nix  default.nix  lib.nix  overrides.nix  pkgs-v2.nix  pkgs.nix  release.nix  shell.nix  shell.sh  versions.json
nix/derivations/: haskeline.nix  hschain-crypto.nix  hschain-types.nix  hschain.nix  katip-elasticsearch.nix  katip.nix  repline.nix  retry.nix  servant-client.nix  servant.nix
nix/derivations-manual/: secp256k1-haskell.nix
scripts/: TestPatCompiler.hs
(+165 files in other folders)
