name:           hex-common
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/hexresearch/xenochain#readme>
homepage:       https://github.com/hexresearch/xenochain/hex-common#readme
bug-reports:    https://github.com/hexresearch/xenochain/hex-common/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/hexresearch/xenochain/hex-common

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.11 && <5
    , aeson
    , bytestring
    , containers
    , directory
    , immortal
    , IntervalMap
    , lens
    , monad-control
    , mtl
    , pretty-show
    , safe
    , stm
    , template-haskell
    , text
    , time
    , unbounded-delays
    , unliftio-core
    , url
    , vector
    , vector-space
    , yaml
  exposed-modules:
      Hex.Common.Aeson
      Hex.Common.CircularBuffer
      Hex.Common.ClockBuffer
      Hex.Common.Control
      Hex.Common.Delay
      Hex.Common.Generics
      Hex.Common.Immortal
      Hex.Common.IO
      Hex.Common.Lens
      Hex.Common.Lock
      Hex.Common.Text
      Hex.Common.Time
      Hex.Common.Time.Const
      Hex.Common.TimeStampMap
      Hex.Common.TvMap
      Hex.Common.Yaml
      Hex.Common.Url
  other-modules:
      Paths_hex_common
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    FlexibleContexts
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies
    TupleSections

test-suite hex-common-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
--    , hex-common
  other-modules:
      Paths_hex_common
  default-language: Haskell2010
