name:                   hindley-milner-tags
version:                0.1.0.0
synopsis:               Template for Hindley-Milner based languages
description:
    This package contains an implemention of Hindley-Milner and Algorithm W as
    a starting point for derived languages.


license: MIT
author:                 Michael B. Galem, Anton Kholomiov
maintainer:             michael.gale@cl.cam.ac.uk
category:               Language
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:                 git
  location:             https://github.com/mbg/hindley-milner

library
  ghc-options:  -Wall
  exposed-modules:
    Language.HM,
    Language.HM.Infer,
    Language.HM.Pretty,
    Language.HM.Subst,
    Language.HM.Term,
    Language.HM.Type,
    Language.HM.TypeError,
    Language.HM.TyTerm

  other-modules:

  -- Other library packages from which modules are imported.
  build-depends:
    base >=4.8 && <5,
    containers >=0.5,
    deriving-compat,
    data-fix,
    mtl,
    prettyprinter,
    pretty-show,
    text,
    transformers

  -- Directories containing source files.
  hs-source-dirs:       src

  -- Base language which the package is written in.
  default-language:     Haskell2010

  default-extensions:
    DeriveFunctor,
    DeriveFoldable,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    OverloadedStrings,
    RankNTypes
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections,
    TypeFamilies,
    TypeSynonymInstances

test-suite hindley-milner-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hindley-milner-tags
                     , text
                     , data-fix
                     , tasty
                     , tasty-hunit
                     , prettyprinter
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Infer
