cabal-version:       2.4
name:                hschain-pow-check
version:             0.1.0.0
synopsis:            Check proof-of-work for hschain blockchain package without calling C
license:             MIT
license-file:        LICENSE
author:              Serguey Zefirov
maintainer:          sergueyz@gmail.com
extra-source-files:  CHANGELOG.md


library
  exposed-modules:     HSChain.POW
  build-depends:       base >=4.9
                     , bytestring
                     , hschain-crypto
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hschain-pow-check-cli
  main-is:             Main.hs
  build-depends:       base >=4.9
                     , optparse-applicative
                     , bytestring
                     , hschain-pow-check
  hs-source-dirs:      exe
  default-language:    Haskell2010

