cabal-version:       >=1.10
name:                hschain-utxo-blockchain
version:             0.1.0.0
synopsis:            bridge to hschain
description:         Defines utilities to work on top of hschain
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              anton-k
maintainer:          anton.kholomiov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  Ghc-options:         -Wall
  exposed-modules:     Hschain.Utxo.Blockchain
                       Hschain.Utxo.Blockchain.Bchain
                       Hschain.Utxo.Blockchain.Interpret
                       Hschain.Utxo.Blockchain.Logic
                       Hschain.Utxo.Blockchain.Net
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , aeson
                     , bytestring
                     , containers
                     , cryptonite
                     , data-fix                  >=0.3
                     , deepseq
                     , data-default-class
                     , directory
                     , exceptions
                     , filepath
                     , hex-common
                     , hschain
                     , hschain-types
                     , hschain-crypto
                     , hschain-control
                     , hschain-logger
                     , hschain-mempool
                     , hschain-merkle
                     , hschain-net
                     , hschain-utxo-lang
                     , hschain-utxo-state
                     , mtl
                     , network
                     , parallel
                     , prettyprinter
                     , prometheus-client
                     , serialise
                     , stm
                     , text
                     , transformers
                     , vector
                     , unordered-containers

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    StandaloneDeriving
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
 -
