cabal-version:       >=1.10
name:                hschain-utxo-compiler
version:             0.1.0.0
synopsis:            Utilities to compile smartcontracts
description:         Utility to compile scripts and prove ownership of the transaction
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              anton-k
maintainer:          anton.kholomiov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  Ghc-options:         -Wall
  exposed-modules:
      Hschain.Utxo.Compiler.App
      Hschain.Utxo.Compiler.Commands
      Hschain.Utxo.Compiler.Options
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , aeson
                     , bytestring
                     , hschain-utxo-lang
                     , hschain-crypto
                     , optparse-applicative
                     , serialise
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    FlexibleInstances
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    TypeFamilies
    RecordWildCards
    OverloadedStrings
    LambdaCase
    KindSignatures
    DeriveFunctor
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    UndecidableInstances

executable hschain-utxo-compiler
  Ghc-options:         -Wall
  main-is: Main.hs
  -- other-modules:
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.11 && <5
    , aeson
    , bytestring
    , optparse-applicative
    , text
    , hschain-utxo-lang
    , hschain-utxo-compiler
  default-language: Haskell2010

