cabal-version:       >=1.10
name:                hschain-utxo-pow-node
version:             0.1.0.0
synopsis:            UTXO node in PoW consensus
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              anton-k
maintainer:          sergueyz@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  Ghc-options:         -Wall
  exposed-modules:     Hschain.Utxo.Pow.App
                     , Hschain.Utxo.Pow.App.Options
                     , Hschain.Utxo.Pow.App.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , aeson
                     , bytestring
                     , cryptonite
                     , data-fix
                     , generic-lens
                     , lens
                     , mmorph
                     , hex-common
                     , hschain-crypto
                     , hschain-db
                     , hschain-merkle
                     , hschain-utxo-lang
                     , hschain-PoW
                     , hschain-control
                     , hschain-logger
                     , hschain-net
                     , hschain-pow-func
                     , containers
                     , exceptions
                     , monad-control
                     , katip
                     , mtl
                     , optparse-applicative
                     , serialise
                     , servant
                     , servant-server
                     , sqlite-simple
                     , stm
                     , text
                     , transformers
                     , transformers-base
                     , vector
                     , warp
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingStrategies
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    TypeFamilies
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell


executable hschain-utxo-pow-node-app
  main-is:             Main.hs
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , hschain-utxo
                     , hschain-utxo-pow-node
  hs-source-dirs:      app
  default-language:    Haskell2010

executable hschain-utxo-pow-node-cli
  main-is:             CLI.hs
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , hschain-crypto
                     , hschain-PoW
                     , hschain-utxo
                     , hschain-utxo-lang
                     , hschain-utxo-pow-node
                     , containers
                     , semigroups
                     , text
                     , yaml
                     , vector
                     , data-fix
                     , servant
                     , servant-client
                     , servant-client-core
                     , http-client
                     , optparse-applicative
  hs-source-dirs:      app
  default-language:    Haskell2010


-- Test suite
Test-suite hschain-utxo-pow-node-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-utxo-lang
                     , hschain-utxo-pow-node
                     , hschain-PoW
                     , hschain-pow-func
                     , hschain-crypto
                     , hschain-logger
                     , hschain-control
                     , hschain-merkle
                     , hschain-db
                     , hschain-net
                     --
                     , exceptions
                     , stm
                     , mtl
                     , vector
                     , transformers
                     , tasty             >=0.11
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Store
                       TM.Blocks

