name:                hschain-utxo-state
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              HXR
maintainer:          hxr.team@gmail.com
synopsis:            State for hschain-utxo blockchain
description:         State for hschain-utxo blockchain
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  Ghc-options:         -Wall
  exposed-modules:     Hschain.Utxo.State
                       Hschain.Utxo.State.Query
                       Hschain.Utxo.State.React
                       Hschain.Utxo.State.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , hex-common
                     , hschain-crypto
                     , hschain-utxo-lang
                     , data-fix                  >=0.3
                     , lens
                     , bytestring
                     , containers
                     , cryptonite
                     , prettyprinter
                     , text
                     , vector
                     , hschain-types
                     , hschain-crypto
                     , hschain
                     , serialise
                     , deepseq
                     , aeson
                     , parallel
                     , unordered-containers
                     , mtl
                     , transformers
                     , exceptions

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RankNTypes
    RecordWildCards
    StandaloneDeriving
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
