cabal-version:       >=1.10
name:                hschain-utxo-test
version:             0.1.0.0
synopsis:            tests for hschain-utxo
description:         Package defines several scenarios with exchange of funds over smartcontracts
-- bug-reports:
-- license:
license-file:        LICENSE
author:              anton-k
maintainer:          anton.kholomiov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Hschain.Utxo.Test.Client.Monad
                       Hschain.Utxo.Test.Client.Proc
                       Hschain.Utxo.Test.Client.Scripts.PayForCofee
                       Hschain.Utxo.Test.Client.Scripts.ReversibleAddress
                       Hschain.Utxo.Test.Client.Scripts.SimpleExchange
                       Hschain.Utxo.Test.Client.Scripts.XorGame
                       Hschain.Utxo.Test.Client.Scripts.Utils
                       Hschain.Utxo.Test.Client.Wallet
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , hex-common
                     , hschain
                     , hschain-utxo-api-client
                     , hschain-utxo-api-rest
                     , hschain-utxo-blockchain
                     , hschain-utxo-lang
                     , hschain-utxo-service
                     , hschain-utxo-state
                     , Boolean
                     , containers
                     , cryptonite
                     , data-fix
                     , directory
                     , filepath
                     , hspec
                     , immortal
                     , servant
                     , servant-client
                     , mtl
                     , random
                     , pretty-show
                     , stm
                     , temporary
                     , text
                     , time
                     , timeout
                     , uuid
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    TypeFamilies
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell


executable hschain-utxo-test
  main-is:             Main.hs
  hs-source-dirs:      app
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , hschain-utxo-lang
                     , hschain-utxo-service
                     , hschain-utxo-test
                     , hspec
                     , hex-common
  -- hs-source-dirs:
  default-language:    Haskell2010

