name:                hschain-utxo-api-client
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              HXR
maintainer:          hxr.team@gmail.com
synopsis:            Client for API to hschain-utxo node
description:         Client for API to hschain-utxo node
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  Ghc-options:         -Wall
  exposed-modules:      Hschain.Utxo.API.Client
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.11 && <5
                      , hex-common
                      , hschain-utxo-api-rest
                      , hschain-utxo-lang
                      , hschain-utxo-state
                      , bytestring
                      , exceptions
                      , http-client
                      , http-client-tls
                      , mtl
                      , servant
                      , servant-client      >= 0.16 && < 0.17
                      , servant-client-core >= 0.16 && < 0.17
                      , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeOperators

